# FinalProject

./: .env.template  .gitignore  README.md  app.py  debug_response.json  docker-compose-airflow.yaml  pyproject.toml
.github/workflows/: ci.yaml
Frontend/: LandingPage.py  productlist.py
backend/: config.py
backend/agent/: __init__.py  edges.py  generate_chain.py  graph.py  nodes.py  vector_store.py
backend/database/: chat_sessions.py  users.py
backend/ecom/: fetchlistings.py
backend/schemas/: product.py  search.py
backend/services/: chat.py  choices.py  e_commerce.py  search.py  test.py
backend/views/: __init__.py  chat.py  choices.py  product.py  search.py
dags/: reddit_data_processor.py  reddit_pipeline.py  reddit_posts.json  reddit_posts.py  reddit_scrapper.py  scaperer.py  scrapper.py
dags/output/: multi_subreddit_posts_20241213_121306.csv  multi_subreddit_posts_20241213_121306.json  multi_subreddit_posts_20241213_122132.csv  multi_subreddit_posts_20241213_122132.json  reddit_posts_20241205_222055.csv
frontend/pages/: chat.py
frontend/utils/: chat.py
