[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
praw = "^7.8.1"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
langchain = "^0.3.9"
openai = "^1.56.1"
pinecone-client = "^5.0.1"
boto3 = "^1.35.74"
psycopg2-binary = "^2.9.10"
openpyxl = "^3.1.5"
community = "^1.0.0b1"
langchain-community = "^0.3.9"
langchain-openai = "^0.2.11"
langchain-pinecone = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
